# batLab

./: .gitignore  Cargo.toml  Readme.md  error_log
bat_building/: Cargo.toml
bat_building/src/: gpu_context.rs  lib.rs
bat_building/src/model/: debug.rs  diffusion.rs  error.rs  layer.rs  mod.rs  model.rs  optimizer.rs  types.rs
bat_building/src/model/layer_types/: activation.rs  concat.rs  convolution.rs  fully_connected.rs  group_norm.rs  loss.rs  mod.rs  optimizer.rs  pooling.rs  upsample_conv.rs
bat_building/src/model/shader/: activation.wgsl  back_activation.wgsl  back_concat.wgsl  back_convolution.wgsl  back_fully_connected.wgsl  back_group_norm.wgsl  back_upsample_conv.wgsl  concat.wgsl  convolution.wgsl  fully_connected.wgsl  group_norm.wgsl  loss.wgsl  optimizer.wgsl  sgd.wgsl  sum.wgsl  upsample_conv.wgsl
bat_building/src/model/training/: dataset.rs  diffusion.rs  mod.rs  schedule.rs
bat_building/src/model/training/shader/: diffusion_prepare.wgsl
bat_building/src/training/: dataset.rs  diffusion.rs  mod.rs
bat_building/src/training/shader/: diffusion_prepare.wgsl
bat_building/src/tui/: app.rs  events.rs  mod.rs  storage.rs  ui.rs  visualiser_control.rs
bat_building/src/visualiser/: mod.rs  shader.wgsl
bat_building/src/visualizer/: desktop.rs  platform.rs  wasm.rs
datasets/: cifar_to_raw.py
main/: Cargo.toml
modele/: Cargo.toml  name
modele/src/: main.rs
parallelizer/: Cargo.toml
parallelizer/src/: CodeAudit.md  desktop.rs  gpu_context.rs  layer.rs  lib.rs  model.rs  persistence.rs  platform.rs  spec.rs  types.rs  visualiser.rs  visualizer.rs  wasm.rs
parallelizer/src/model/: debug.rs  error.rs  layer.rs  loss.rs  mod.rs  model.rs  persistence.rs  spec.rs  types.rs
parallelizer/src/model/layer_types/: activation.rs  convolution.rs  fully_connected.rs  loss.rs  mod.rs  pooling.rs
parallelizer/src/model/shader/: activation.wgsl  back_activation.wgsl  back_convolution.wgsl  convolution.wgsl  loss.wgsl  sgd.wgsl  upscale.wgsl
parallelizer/src/shader/: activation.wgsl  convolution.wgsl  loss_mse.wgsl
parallelizer/src/visualizer/: desktop.rs  mod.rs  platform.rs  visualizer.rs  wasm.rs
parallelizer_visualisation/: Cargo.toml
parallelizer_visualisation/src/: lib.rs  show_output.wgsl
parallelizer_visualisation/src/shader/: show_output.wgsl
saved_models/: model-001.json  model-002.json  (+5 more)
(+29 files in other folders)
