# File purpose: Workspace Cargo manifest defining member crates and shared dependency configuration.

[package]
name = "batBuilder"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["bat_building", "main"]

[dependencies]
bat_building = { path = "bat_building" }

[lib]
name = "bat_builder"
path = "src/lib.rs"
