[package]
name = "parallelizer_visualisation"
version = "0.1.0"
edition = "2024"

[dependencies]
parallelizer = { path = "../parallelizer", features = ["visualisation"] }
wgpu = "28.0.0"
winit = "0.30.12"
bytemuck = "1.25.0"
futures = "0.3"
pollster = "0.4"

# used for simple pixel-based rendering in a winit window
